@@ -1,5 +1,10 @@
 2003-10-21  Bruno Haible  <bruno@clisp.org>
 
+	* canonicalize.c (lstat): Define as an alias to 'stat' on systems
+	without symbolic links.
+
+2003-10-21  Bruno Haible  <bruno@clisp.org>
+
 	* wait-process.c (kill): Define appropriately for native Woe32 API.
 
 2003-10-21  Bruno Haible  <bruno@clisp.org>
